--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,14 @@
 
 /public/assets
 .byebug_history
+
+# misc
+.DS_Store
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
