--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "dotenv": "^6.2.0",
     "history": "^4.7.2",
+    "material-ui": "^0.20.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
@@ -12,7 +15,9 @@
     "react-scripts": "^2.0.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3",
+    "superagent": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
