--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.0",
+    "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "history": "^4.7.2",
     "material-ui": "^0.20.2",
